# kafka-blog

./: .gitignore  README.md  dockercompose-cluster.yaml
java/: pom.xml
java/src/main/java/org/github/shautvast/avro/: Main.java
java/src/main/resources/avro/: Person.avsc
rust/: Cargo.toml
rust/src/: main.rs
